<resources>
    <string name="app_name">WhereToGo</string>
    <string name="str_username">E-mail</string>
    <string name="str_password">Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_new_appointment">New</string>
    <string name="str_map">Map</string>
    <string name="str_logout">Logout</string>
    <string name="str_list_appointments">Appointments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key1">AIzaSyCln6hwMxBWFYAAJK3v7KPPftpiEQN_XKQ</string>
    <string name="api_key_routes">AIzaSyAOEfIHh-VYr8V73LmBo_ubiQrOeMdgPaE</string>
    <string name="str_technician">Technician</string>
    <string name="str_logout_message">Do you wish to logout ?</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_realocate">Reallocate</string>
    <string name="str_edit">Edit</string>
    <string name="str_search_address">Type Address and Postal Code</string>
    <string name="str_search">Search</string>
    <string name="str_insert_desc">Insert appointment description</string>
    <string name="str_choose_option">Choose address</string>


    <string-array name="countries_array">
        <item>R. Manuel Espregueira, 4935</item>
        <item>India</item>
        <item>USA</item>
        <item>Indonesia</item>
        <item>Brazil</item>
        <item>Pakistan</item>
        <item>Nigeria</item>
        <item>Bangladesh</item>
        <item>Russia</item>
    </string-array>

    <string-array name="types_array">
        <item>Reparação Router</item>
        <item>Mudança cabo</item>
        <item>USA</item>
    </string-array>
    <string name="str_confirm">Confirm</string>
    <string name="str_api_geo">AIzaSyD3MzrBu4w8kXQ318h8g_UC1qTrRO8EXKI</string>
    <string name="str_new_service">New appointment</string>
    <string name="str_tlm">Cell Phone Number</string>
    <string name="str_watch_list">Watch List</string>
    <string name="str_notify">Technician notified</string>
    <string name="str_no_appointments">0 appointments found</string>
    <string name="str_map_normal">Normal</string>
    <string name="str_map_satellite">Satellite</string>
    <string name="str_map_terrain">Terrain</string>
    <string name="str_traffic">Enable traffic</string>
    <string name="str_done">Done</string>
    <string name="str_pending">Pending</string>
    <string name="str_rejected">Rejected</string>
    <string name="str_pending_2">Waiting approval</string>
    <string name="str_canceled">Canceled</string>
    <string name="str_accept">Accept</string>
    <string name="str_refuse">Refuse</string>
    <string name="str_end_rout">End of route</string>
    <string name="str_begin_rout">Begin of route</string>
    <string name="str_choose_tec">Choose new technician</string>
    <string name="str_message_rejected"> rejected appointment</string>
    <string name="str_message_canceled"> canceled appointment</string>
    <string name="str_title_rejected">Appointment rejected</string>
    <string name="str_title_canceled">Appointment canceled</string>
    <string name="str_no_connection">Check your network connection</string>
</resources>
