<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Admin.NewAppointment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_border"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/input_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="@string/str_search_address"
                android:inputType="textEmailAddress"
                android:textSize="15dp" />


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                app:icon="@drawable/ic_musica_searcher"
                app:iconGravity="textStart"
                app:iconSize="15dp"
                app:iconTint="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                app:icon="@drawable/ic_cancel_music"
                app:iconGravity="textStart"
                app:iconSize="15dp"
                app:iconTint="@color/colorPrimary" />


        </LinearLayout>

        <!--com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/data"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxStrokeColor="@color/colorPrimary">

            <EditText
                android:id="@+id/date_input"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_calendar"
                android:drawableTint="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_moradas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:prompt="@string/str_choose_option"></Spinner>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:prompt="@string/str_choose_option"></Spinner>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/shipper_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/shipper_field"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/str_insert_desc"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_tecnico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:prompt="@string/str_choose_option"></Spinner>

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_card_realocate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:includeFontPadding="false"
            android:text="@string/str_confirm"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_check_black_24dp"
            app:iconSize="12dp"
            android:textSize="12dp"
            android:fontFamily="sans-serif"
            app:strokeColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_card_edit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/service_card_realocate"
            android:layout_marginLeft="10dp"
            android:includeFontPadding="false"
            android:text="@string/str_cancel"
            android:textAllCaps="false"
            app:icon="@drawable/ic_cancel_music"
            app:iconSize="12dp"
            android:fontFamily="sans-serif"
            app:strokeColor="@color/colorPrimary" />

    </LinearLayout>





</RelativeLayout>