<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:layout_marginRight="2dp"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="175dp"
        android:layout_marginRight="2dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">



                    <ImageView
                        android:id="@+id/address_icon"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="3.5dp"
                        android:src="@drawable/ic_pin" />

                    <TextView
                        android:id="@+id/service_card_address_tec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="12dp"
                        android:layout_toRightOf="@id/address_icon"
                        android:text="Rua Manuel Bino" />

                    <ImageView
                        android:id="@+id/icon_date"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_below="@id/service_card_address_tec"
                        android:layout_marginTop="3.5dp"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/service_card_date_tec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/service_card_address_tec"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toRightOf="@id/icon_date"
                        android:textSize="12dp"
                        android:text="14-04-2019" />

                    <ImageView
                        android:id="@+id/icon_desc"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_below="@id/service_card_date_tec"
                        android:layout_marginTop="3.5dp"
                        android:src="@drawable/ic_clipboards" />

                    <TextView
                        android:id="@+id/service_card_description_tec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/service_card_date_tec"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/icon_desc"
                        android:textSize="12dp"
                        android:paddingRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="skahjdkshjkddasjndm,asnm,dasnm,dnmadnsma,ndms,anmds,ams,namadksakndsaknnjdsnakjnjjknjdsa" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/service_card_accept_tec"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:textSize="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/str_accept"
                        android:layout_below="@id/service_card_description_tec"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_check_black_24dp"
                        android:layout_marginRight="5dp"
                        app:iconSize="10dp"
                        android:fontFamily="sans-serif"
                        app:strokeColor="@color/colorPrimary" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/service_card_refuse_tec"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:textSize="10dp"
                        android:layout_below="@id/service_card_description_tec"
                        android:layout_toRightOf="@id/service_card_accept_tec"
                        android:includeFontPadding="false"
                        android:visibility="invisible"
                        android:text="@string/str_refuse"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_cancel"
                        app:iconSize="10dp"
                        android:fontFamily="sans-serif"
                        app:strokeColor="@color/colorPrimary" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/service_card_done_tec"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:visibility="invisible"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:textSize="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/str_done"
                        android:layout_below="@id/service_card_description_tec"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_check_black_24dp"
                        android:layout_marginRight="5dp"
                        app:iconSize="10dp"
                        android:fontFamily="sans-serif"
                        app:strokeColor="@color/colorPrimary" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/service_card_cancel_tec"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:visibility="invisible"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:textSize="10dp"
                        android:layout_below="@id/service_card_description_tec"
                        android:layout_toRightOf="@id/service_card_done_tec"
                        android:includeFontPadding="false"
                        android:text="@string/str_cancel"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_cancel"
                        app:iconSize="10dp"
                        android:fontFamily="sans-serif"
                        app:strokeColor="@color/colorPrimary" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/service_card_linearright"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/service_card_technician"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal">


                    <TextView
                        android:id="@+id/service_card_status_tec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_below="@id/estado_color_tec"
                        android:backgroundTint="@color/colorPrimary"
                        android:textAlignment="center"
                        android:text="status" />

                    <ImageView
                        android:id="@+id/estado_color_tec"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_pendent_accepted" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>